--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 body{
     background-color: rgb(8, 8, 32);
     color: white;
@@ -72,19 +71,6 @@ footer{
     text-align: center;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
 /* Mobile */
 @media (max-width: 451px){
 
@@ -92,39 +78,31 @@ footer{
         display: flex;
         flex-direction: column;
         font-size:medium;
-        padding: 0;
-        width: 17em;
-    }
-    
+        align-items: flex-start;
+        
+    }    
     header{
         color: white;
         display: flex;
         flex-direction: column;
-        align-items: center;
-        text-align: center;
-        width: 22em;
-        
+  
     }
 
     header nav a{
-        padding: 1em;
         display: flex;
         background-color: red;
         color: rgb(255, 255, 255);
-        width: 19em;
         text-align: center;
     }
 
     /**/
     main{
-        padding: 0;
+     
     }
 
     main section{
         flex-direction: column;
         align-items: flex-start;
-        padding: 0;
-        width: 22em;
     }
 
     main section div a{
@@ -135,9 +113,7 @@ footer{
 
     main div{
         background-color:rgb(30, 30, 114);
-        width: 22em;
-        margin-bottom: 1em;
-        padding: 0;
+
     }
 
     main div img{
@@ -157,8 +133,19 @@ footer{
         flex-direction: column;
         text-align: center;
         align-items: center;
-        margin-left: 6em;
-        
+    
     }
 
 }
+
+
+
+
+
+
+
+
+
+
+
+
