--- a/API-002-CLIMA/wstyle.css
+++ b/API-002-CLIMA/wstyle.css
@@ -26,6 +26,14 @@ body{
 
 .form h3{
     margin-bottom: 1em;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    text-transform: uppercase;
+}
+
+#city-input ,#city , #description{
+    text-transform: capitalize;
 }
 
 .form-input-container{
