--- a/style.css
+++ b/style.css
@@ -6,13 +6,20 @@ body{
 }
 
 header{
+    background-color: rgb(8, 8, 32);
+    position: fixed;
     display: flex;
     justify-content: space-between;
     margin-bottom: 2em;
     align-items: center;
-    border-bottom: 1px solid #FFF;
-    
+    border-bottom: 1px solid #FFF; 
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 999;
 }
+
+
  
 .real-task{
     background-color: greenyellow;
@@ -33,8 +40,6 @@ header a{
 header a:hover, p:hover{
     opacity: 1;
 }
-
-
 
 /**/
 
@@ -90,14 +95,18 @@ footer{
         flex-direction: column;
         justify-content: center;
         font-weight: bold;
-
     }
 
     header{
         flex-direction: column;
         border-bottom: 0px;
+        height: 100px;
     }
 
+    header a{
+        padding: 0;
+        
+    }
     section{
         flex-direction: column;
         gap: 50px;
@@ -106,15 +115,23 @@ footer{
     nav{
         display: flex;
         flex-direction: column;
-        }
+        margin-top: -25%;   
+    }
 
     .links{
-        background-color: red;
-        width: 15em;
-        border-radius: 1em ;
-        margin-bottom: 1em ;
-        height: 1em;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 5px;
+        width: 800px;
+        color: white;
+        font-weight: bold;
+        margin-bottom: 3px ;
+        border-bottom: 2px solid white;
+        height: 15px;
+        opacity: 1;
     }
+    
     div{
         max-width: 17em;
     }
@@ -126,6 +143,18 @@ footer{
 
     footer{
         background-color: rgb(255, 0, 0);
+    }
+
+    #name{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 800px;
+        opacity: 1;
+        margin-top: 5px;
+        border-bottom: 2px solid yellow;
+        color: yellow;
+        opacity: 0.7;
     }
 }
   /*  body{
